# SimpleNewsSystem

./: .env  README.md  docker-compose.yml  nginx.conf
backend/: .env  .env.docker  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: hashing.py  oauth.py  token.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/repository/: auth_service.py  news_service.py  user_service.py
backend/app/routers/: auth_routes.py  news.py  news_routes.py  user.py  user_routes.py
backend/app/schemas/: login.py  news.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 3a7c3ebabac7_image_can_be_null.py  5da1976705d2_rename_userame_to_username.py  6a9b399bc34e_change_content_column_to_text.py  808be35187a9_image_fix.py  8ea548e3c45b_fix_typo.py  ac6d4d4b6f12_crear_modelos_con_enum.py  f1aaa5b66c9a_crear_modelos.py  fdf04d2eea1d_change_content_column_to_text.py
backend/test/: test_api.py
frontend/simple-news/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/simple-news/src/: App.vue  main.ts
frontend/simple-news/src/components/: Navbar.vue  newsForm.vue
frontend/simple-news/src/models/: newsModel.ts
frontend/simple-news/src/router/: index.ts
frontend/simple-news/src/services/: authService.ts  authorService.ts  newsService.ts
frontend/simple-news/src/views/: AboutView.vue  DashboardView.vue  HomeView.vue  LoginView.vue  NewsDetailView.vue  RegisterView.vue
