[project]
name = "backend"
authors = [
    { name = "Alexlizzt", email = "alejandrolistc@gmail.com"}
    ]
version = "0.1.0"
description = "Backend for Simple News project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev-dependencies = [
    "coverage>=7.9.1",
    "pytest>=8.4.0",
    ]
